<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:title="@string/change_language"
        android:icon="@drawable/ic_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_color"
        android:title="@string/action_theme"
        app:showAsAction="always" />

</menu>


