<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="@string/article_title"
        app:titleTextColor="@android:color/white" />

    <!-- Article Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <!-- Article Description -->
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_below="@id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray" />

    <!-- Article Date -->
    <TextView
        android:id="@+id/dateTextView"
        android:layout_below="@id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@android:color/holo_blue_dark" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_below="@id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/article_save" />

    <!-- Go To Article Button -->
    <Button
        android:id="@+id/goToArticleButton"
        android:layout_below="@id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/go_to_article" />

</RelativeLayout>



